--- a/BankAccount/BankAccount.csproj
+++ b/BankAccount/BankAccount.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Accounts.cs" />
+    <Compile Include="Checking.cs" />
+    <Compile Include="Client.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Savings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
